--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Library
 /.vs
 /Temp
+obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
+obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
