--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,9 +62,11 @@
     <Compile Include="Assets\Script\GeometricPrimitive\BarycentricCoordinates3D.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\PlaneToPoint.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixGramSchmidt.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\RayToPlane.cs" />
     <Compile Include="Assets\Script\Vector\VectorInterpolation.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixShear.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\PlaneDraw.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\RayToTriangle.cs" />
     <Compile Include="Assets\Script\GeometryCheck\PointToAABB.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixRotateByAxis.cs" />
     <Compile Include="Assets\Script\Vector\VectorCrossProduct.cs" />
@@ -83,30 +85,34 @@
     <Compile Include="Assets\Script\Matrix\MatrixAffine.cs" />
     <Compile Include="Assets\Script\GeometryCheck\PointToPlane.cs" />
     <Compile Include="Assets\Script\GeometryCheck\PointToImplicitLine.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\StaticSphereToPlane.cs" />
     <Compile Include="Assets\Script\Tool\MathUtil.cs" />
     <Compile Include="Assets\Scripts\Tool\PixelScreen.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixScale.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\DynamicSphereToPlane.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\RayIntersection.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\SphereToAABB.cs" />
     <Compile Include="Assets\Script\Vector\VectorSubtraction.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\TriangleSpecialPoint.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\RayToSphere.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\BoundingBox.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixScaleByAxis.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\DynamicSphereIntersection.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\StaticSphereIntersection.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixProjectionByAxis.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixProjection.cs" />
     <Compile Include="Assets\Script\Vector\RuleOfParallelogram.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixRotate.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\ThreePlanesIntersection.cs" />
     <Compile Include="Assets\Script\Vector\VectorProjection.cs" />
     <Compile Include="Assets\Script\Matrix\MatrixReflectByAxis.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\BasicsTriangle.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\RayToAABB.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\LineEquation.cs" />
     <Compile Include="Assets\Script\Vector\RuleOfTriangles.cs" />
     <Compile Include="Assets\Script\GeometricPrimitive\PlaneEquation.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\RayIntersection.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\RayToPlane.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\ThreePlanesIntersection.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\RayToSphere.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\StaticSphereIntersection.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\DynamicSphereIntersection.cs" />
-    <Compile Include="Assets\Script\GeometryCheck\SphereToAABB.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\StaticAABBIntersection.cs" />
+    <Compile Include="Assets\Script\GeometryCheck\DynamicAABBIntersection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
